
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_6__ TYPE_2__ ;
typedef struct TYPE_5__ TYPE_1__ ;


struct TYPE_6__ {size_t size; int * data; } ;
struct TYPE_5__ {scalar_t__ weight; TYPE_2__ symbols; } ;
typedef TYPE_1__ Coin ;


 int uivector_push_back (TYPE_2__*,int ) ;

__attribute__((used)) static void add_coins(Coin* c1, const Coin* c2)
{
  size_t i;
  for(i = 0; i < c2->symbols.size; i++) uivector_push_back(&c1->symbols, c2->symbols.data[i]);
  c1->weight += c2->weight;
}
